--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,22 @@
 $main-black: #121212;
 $main-grey: #333D42;
 $day-block-hovered: #293135;
+$main-border: rgba(255, 255, 255, 0.2);
+
 html {
-  background-color: $main-black;
+  background-color: #1a1f21;
 }
 
 .page {
-  min-width: 100%;
+  min-width: 90%;
   min-height: 100%;
+  background-color: #212529;
   display: flex;
   position: absolute;
+  border-left: 1px solid $main-border;
+  border-right: 1px solid $main-border;
+  margin-left: 5%;
+  margin-right: 5%;
   padding-top: 65px;
   flex-direction: column;
   justify-content: center;
@@ -35,117 +42,375 @@ html {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
     overflow: auto;
 
     .load-button {
       position: absolute;
       top: 80%;
-      left: 30%;
+      left: 0%;
     }
-    .weather-containers {
-      margin-top: 20px;
-      margin-bottom: 20px;
+
+    .center-div {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
+      align-items: start;
+      width: max-content;
+      height: max-content;
 
-      .day-block {
-        
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 20%;
-        height: 40%;
+      .settings {
         background-color: $main-grey;
-        font-family: "Rubik", sans-serif;
-        color: aliceblue;
-        font-optical-sizing: auto;
-        font-weight: 300;
-        font-style: normal;
-        font-size: 40px;
-        max-width: 300px;
-        min-width: 100px;
-        min-height: 400px;
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        cursor: pointer;
-        z-index: 1;
+        width: 1500px;
+        height: 275px;
+        border-radius: 20px;
+        border: 1px solid $main-border;
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
 
-        &:hover {
-          background-color: $day-block-hovered;
+        .recent-locations {
+          display: flex;
+          flex-direction: column;
+          justify-content: start;
+          align-items: center;
+          height: 100%;
+          width: 33%;
+          border-right: 1px solid $main-border;
+
+          .input-form {
+            border: 2px solid transparent;
+            margin-top: 20px;
+            background-color: #475055;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            
+            .span-svg-search {
+              padding-left: 16px;
+              padding-right: 5px;
+              padding-top: 4px;
+            }
+
+            .input-span {
+              padding-top: 8px;
+              padding-bottom: 8px;
+              display: flex;
+              flex-direction: row;
+              justify-content: start;
+              align-items: center;
+
+              .search-input {
+                background-color: transparent;
+                font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+                font-size: 14px;
+                border: none;
+                height: 20px;
+                width: 400px;
+                color: 
+                rgb(242, 242, 242);
+                outline-style: none;
+
+                &::placeholder {
+                  color: rgb(139, 162, 173);
+                  opacity: 1;
+                }
+
+                &::-ms-input-placeholder { 
+                  color: rgb(139, 162, 173);
+                }
+              }
+            } 
+          }
         }
 
-        .current-day {
-          font-family: "Itim", cursive;
-          font-weight: 400;
-          font-style: normal;
-          font-size: 48px;
+        .current-locations {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: start;
+          height: 100%;
+          width: 27%;
+          padding-left: 15px;
+          padding-right: 15px;
+          border-right: 1px solid $main-border;
+
+          .title-settings {
+            padding-left: 20px;
+            padding-bottom: 0px;
+            font-size: 22px;
+            font-weight: 400;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            color: rgb(139, 162, 173);
+          }
+          .lat-and-long {
+            position: relative;
+            padding-left: 15px;
+            padding-right: 15px;
+
+            .lat-and-long-label {
+              position: absolute;
+              padding-left: 12px;
+              padding-top: 6px;
+              font-size: 15px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              color: rgb(139, 162, 173);
+            }
+  
+            .lat-and-long-input {
+              background-color: transparent;
+              border: 1px solid $main-border;
+              border-radius: 6px;
+              color: rgb(222, 226, 230);
+              cursor: text;
+              font-size: 16px;
+              line-height: 20px;
+              font-weight: 400;
+              width: 340px;
+              height: 20px;
+              padding-top: 28px;
+              padding-left: 12px;
+              padding-right: 12px;
+              padding-bottom: 10px;
+            }
+          }
+  
+          .location-div {
+            position: relative;
+            padding-left: 15px;
+  
+            .location-label {
+              position: absolute;
+              padding-left: 12px;
+              padding-top: 6px;
+              font-size: 15px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              color: rgb(139, 162, 173);
+            }
+  
+            .location-input {
+              background-color: transparent;
+              border: 1px solid $main-border;
+              border-radius: 6px;
+              color: rgb(222, 226, 230);
+              cursor: text;
+              font-size: 16px;
+              line-height: 20px;
+              font-weight: 400;
+              width: 340px;
+              height: 20px;
+              padding-top: 28px;
+              padding-left: 12px;
+              padding-right: 12px;
+              padding-bottom: 10px;
+            }
+          }
         }
 
-        .current-date {
-          font-size: 25px;
-          padding-bottom: 7px;
-        }
+        .add-locations {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: start;
+          height: 100%;
+          width: 40%;
+          padding-left: 15px;
 
-        .current-temperature {
-          user-select: none;
-          font-family: "Montserrat", sans-serif;
+          .title-settings {
+            padding-left: 20px;
+            padding-bottom: 0px;
+            font-size: 22px;
+            font-weight: 400;
+            margin-top: 0px;
+            margin-bottom: 0px;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            color: rgb(139, 162, 173);
+          }
+          .lat-and-long {
+            position: relative;
+            padding-left: 15px;
+            padding-right: 15px;
+  
+            .lat-and-long-label {
+              position: absolute;
+              padding-left: 12px;
+              padding-top: 6px;
+              font-size: 15px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              color: rgb(139, 162, 173);
+            }
+  
+            .lat-and-long-input {
+              background-color: transparent;
+              border: 1px solid $main-border;
+              border-radius: 6px;
+              color: rgb(222, 226, 230);
+              cursor: text;
+              font-size: 16px;
+              line-height: 20px;
+              font-weight: 400;
+              width: 340px;
+              height: 20px;
+              padding-top: 28px;
+              padding-left: 12px;
+              padding-right: 12px;
+              padding-bottom: 10px;
+
+              &:focus {
+                outline-style: solid;
+                outline-width: 1px;
+                outline-color: aliceblue;
+                outline-offset: 10;
+              }
+            }
+          }
+  
+          .location-div {
+            position: relative;
+            padding-left: 15px;
+  
+            .location-label {
+              position: absolute;
+              padding-left: 12px;
+              padding-top: 6px;
+              font-size: 15px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              color: rgb(139, 162, 173);
+            }
+  
+            .location-input {
+              background-color: transparent;
+              border: 1px solid $main-border;
+              border-radius: 6px;
+              color: rgb(222, 226, 230);
+              cursor: text;
+              font-size: 16px;
+              line-height: 20px;
+              font-weight: 400;
+              width: 340px;
+              height: 20px;
+              padding-top: 28px;
+              padding-left: 12px;
+              padding-right: 12px;
+              padding-bottom: 10px;
+            }
+          }
+        }
+        
+      }
+  
+      .weather-containers {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+  
+        .day-block {
+          
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          width: 20%;
+          height: 40%;
+          background-color: $main-grey;
+          font-family: "Rubik", sans-serif;
+          color: aliceblue;
           font-optical-sizing: auto;
           font-weight: 300;
           font-style: normal;
-          font-size: 90px;
-          display: flex;
-          justify-content: center;
-          align-items: start;
-
-          .current-temperature-value {
-            padding-left: 33.2px;
-          }
-          .celcius {
-            font-size: 30px;
-            font-weight: 500;
-            padding-top: 15px;
-            padding-left: 4px;
-          }
-        }
-
-        .wind {
-          display: flex;
-          flex-direction: row;
-          justify-content: center;
-          align-items: center;
-          padding-top: 15px;
-
-          .wind-speed {
-            padding-left: 5px;
-            padding-top: 3px;
-            font-size: 27px;
-          }
-
-          .wind-direction {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-        }
-
-        .more-info-button {
-          width: 100%;
-          height: 40px;
-          background: transparent;
-          margin-top: 5px;
-          color: rgb(139, 162, 173);
-          border: none;
-          border-radius: 6px;
+          font-size: 40px;
+          max-width: 300px;
+          min-width: 300px;
+          min-height: 400px;
+          border: 1px solid $main-border;
           cursor: pointer;
+          z-index: 1;
+  
+          &:hover {
+            background-color: $day-block-hovered;
+          }
+  
+          .current-day {
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            font-weight: 300;
+            font-style: normal;
+            font-size: 48px;
+            line-height: 60px;
+          }
+  
+          .current-date {
+            font-size: 25px;
+            font-weight: 200;
+            padding-bottom: 7px;
+          }
+  
+          .current-temperature {
+            user-select: none;
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 200;
+            font-style: normal;
+            font-size: 90px;
+            display: flex;
+            justify-content: center;
+            align-items: start;
+  
+            .current-temperature-value {
+              padding-left: 33.2px;
+            }
+            .celcius {
+              font-size: 30px;
+              font-weight: 500;
+              padding-top: 15px;
+              padding-left: 4px;
+            }
+          }
+  
+          .wind {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding-top: 15px;
+  
+            .wind-speed {
+              padding-left: 5px;
+              padding-top: 3px;
+              font-size: 27px;
+            }
+  
+            .wind-direction {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+          }
+  
+          .more-info-button {
+            width: 100%;
+            height: 40px;
+            background: transparent;
+            margin-top: 5px;
+            color: rgb(139, 162, 173);
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+          }
         }
       }
     }
+    
   }
 }
