Made main page logic

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 $main-black: #121212;
-$main-grey: #333D42;
+$main-grey: #333d42;
 $day-block-hovered: #293135;
 $main-border: rgba(255, 255, 255, 0.2);
+$main-font-family: system-ui, -apple-system, "Segoe UI", Roboto;
 
 html {
   background-color: #1a1f21;
@@ -93,6 +94,16 @@ html {
             // border-bottom-right-radius: 20px;
             top: 40px;
 
+            .search-menu-array-elem-location-name-h3 {
+              margin: 0px;
+              margin-top: 5px;
+              padding-left: 19px;
+              color: rgb(139, 162, 173);
+              font-size: 19px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              font-weight: 500;
+            }
+
             .search-menu-array {
               border-top: 1px solid $main-border;
               margin-top: 30px;
@@ -162,7 +173,7 @@ html {
             flex-direction: row;
             justify-content: start;
             align-items: center;
-            
+
             .span-svg-search {
               padding-left: 16px;
               padding-right: 5px;
@@ -184,8 +195,7 @@ html {
                 border: none;
                 height: 20px;
                 width: 350px;
-                color: 
-                rgb(242, 242, 242);
+                color: rgb(242, 242, 242);
                 outline-style: none;
 
                 &::placeholder {
@@ -193,18 +203,18 @@ html {
                   opacity: 1;
                 }
 
-                &::-ms-input-placeholder { 
+                &::-ms-input-placeholder {
                   color: rgb(139, 162, 173);
                 }
               }
             }
-            
+
             .input-cleaner-button {
               background: transparent;
               position: relative;
               border: none;
               cursor: pointer;
-              
+
               margin-right: 15px;
               border-radius: 20px;
               width: 50px;
@@ -225,7 +235,7 @@ html {
         .current-locations {
           display: flex;
           flex-direction: column;
-          justify-content: space-around;
+          justify-content: space-between;
           align-items: center;
           height: 100%;
           width: 33%;
@@ -235,6 +245,7 @@ html {
 
           .current-locations-h2-div {
             width: 460px;
+            margin-top: 10px;
             display: flex;
             flex-direction: row;
             justify-content: start;
@@ -251,7 +262,6 @@ html {
               color: rgb(139, 162, 173);
             }
           }
-          
 
           .lat-and-long {
             position: relative;
@@ -266,7 +276,7 @@ html {
               font-family: system-ui, -apple-system, "Segoe UI", Roboto;
               color: rgb(139, 162, 173);
             }
-  
+
             .lat-and-long-input {
               background-color: transparent;
               border: 1px solid $main-border;
@@ -284,12 +294,13 @@ html {
               padding-bottom: 10px;
             }
           }
-  
+
           .location-div {
             position: relative;
             padding-left: 15px;
             padding-right: 15px;
-  
+            margin-bottom: 10px;
+
             .location-label {
               position: absolute;
               padding-left: 12px;
@@ -298,7 +309,7 @@ html {
               font-family: system-ui, -apple-system, "Segoe UI", Roboto;
               color: rgb(139, 162, 173);
             }
-  
+
             .location-input {
               background-color: transparent;
               border: 1px solid $main-border;
@@ -321,13 +332,14 @@ html {
         .add-locations {
           display: flex;
           flex-direction: column;
-          justify-content: space-around;
+          justify-content: space-between;
           align-items: center;
           height: 100%;
           width: 33%;
-          
+
           .add-locations-h2-div {
             width: 460px;
+            margin-top: 10px;
             display: flex;
             flex-direction: row;
             justify-content: start;
@@ -343,8 +355,7 @@ html {
               font-family: system-ui, -apple-system, "Segoe UI", Roboto;
               color: rgb(139, 162, 173);
             }
-
-        }
+          }
 
           .lat-and-long-add-location-div {
             display: flex;
@@ -355,7 +366,20 @@ html {
 
             .lat-and-long {
               position: relative;
-    
+
+              .lat-long-error {
+                background-color: #dc3545;
+                width: max-content;
+                height: 30px;
+                padding-left: 3px;
+                padding-right: 3px;
+                line-height: 30px;
+                color: aliceblue;
+                font-size: 11px;
+                border-radius: 6px;
+                font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              }
+
               .lat-and-long-label {
                 position: absolute;
                 padding-left: 12px;
@@ -364,7 +388,7 @@ html {
                 font-family: system-ui, -apple-system, "Segoe UI", Roboto;
                 color: rgb(139, 162, 173);
               }
-    
+
               .lat-and-long-input {
                 background-color: transparent;
                 border: 1px solid $main-border;
@@ -380,7 +404,7 @@ html {
                 padding-left: 12px;
                 // padding-right: 12px;
                 padding-bottom: 10px;
-  
+
                 &:focus {
                   outline-style: solid;
                   outline-width: 1px;
@@ -390,13 +414,23 @@ html {
               }
             }
           }
-          
-  
+
           .location-div {
             position: relative;
-            
-            
-  
+
+            .location-error {
+              background-color: #dc3545;
+              width: max-content;
+              height: 30px;
+              padding-left: 3px;
+              padding-right: 3px;
+              line-height: 30px;
+              color: aliceblue;
+              font-size: 11px;
+              border-radius: 6px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            }
+
             .location-label {
               position: absolute;
               padding-left: 12px;
@@ -405,12 +439,13 @@ html {
               font-family: system-ui, -apple-system, "Segoe UI", Roboto;
               color: rgb(139, 162, 173);
             }
-  
+
             .location-input {
               background-color: transparent;
               border: 1px solid $main-border;
               border-radius: 6px;
               color: rgb(222, 226, 230);
+              color-scheme: dark;
               cursor: text;
               font-size: 16px;
               line-height: 20px;
@@ -437,6 +472,7 @@ html {
             justify-content: start;
             align-items: center;
             width: 460px;
+            margin-bottom: 10px;
 
             .add-location-button-div {
               display: flex;
@@ -446,38 +482,58 @@ html {
               margin-top: 9px;
               margin-bottom: 9px;
               margin-left: 10px;
-              height: 40px; 
+              height: 40px;
               width: 95px;
               border-radius: 20px;
               outline: none;
               border: 1px solid $main-border;
               cursor: pointer;
               background-color: transparent;
-              color:rgb(139, 162, 173);
-  
+              color: rgb(139, 162, 173);
+
               &:hover {
-                background-color:#475055;
+                background-color: #475055;
               }
-  
+
               .add-location-button {
-                
                 outline: none;
                 border: none;
                 cursor: pointer;
                 background: transparent;
-                color:rgb(139, 162, 173);
+                color: rgb(139, 162, 173);
                 font-family: system-ui, -apple-system, "Segoe UI", Roboto;
                 font-size: 16px;
                 font-weight: 500;
                 padding-bottom: 4px;
               }
             }
+            .add-location-button-successfully-added {
+              margin-left: 15px;
+              border-radius: 20px;
+              background-color: #dc3545;
+              width: max-content;
+              height: 30px;
+              padding-left: 3px;
+              padding-right: 3px;
+              line-height: 30px;
+              color: aliceblue;
+              font-size: 15px;
+              border-radius: 6px;
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              height: 40px;
+              padding-left: 15px;
+              padding-right: 15px;
+              width: max-content;
+              text-align: center;
+              line-height: 40px;
+              border: 1px solid $main-border;
+              user-select: none;
+              -ms-user-select: none;
+            }
           }
-          
         }
-        
       }
-  
+
       .weather-containers {
         margin-top: 20px;
         margin-bottom: 20px;
@@ -487,9 +543,8 @@ html {
         align-items: center;
         width: 100%;
         height: 100%;
-  
+
         .day-block {
-          
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -509,11 +564,11 @@ html {
           border: 1px solid $main-border;
           cursor: pointer;
           z-index: 1;
-  
+
           &:hover {
             background-color: $day-block-hovered;
           }
-  
+
           .current-day {
             font-family: system-ui, -apple-system, "Segoe UI", Roboto;
             color: rgb(139, 162, 173);
@@ -522,14 +577,14 @@ html {
             font-size: 48px;
             line-height: 60px;
           }
-  
+
           .current-date {
             font-size: 25px;
             font-weight: 200;
             padding-bottom: 7px;
             color: rgb(139, 162, 173);
           }
-  
+
           .current-temperature {
             user-select: none;
             font-family: "Montserrat", sans-serif;
@@ -540,7 +595,7 @@ html {
             display: flex;
             justify-content: center;
             align-items: start;
-  
+
             .current-temperature-value {
               padding-left: 33.2px;
             }
@@ -551,21 +606,21 @@ html {
               padding-left: 4px;
             }
           }
-  
+
           .wind {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
             padding-top: 15px;
-  
+
             .wind-speed {
               padding-left: 5px;
               padding-top: 3px;
               font-size: 27px;
               color: rgb(139, 162, 173);
             }
-  
+
             .wind-direction {
               display: flex;
               align-items: center;
@@ -573,20 +628,23 @@ html {
               color: rgb(139, 162, 173);
             }
           }
-  
-          .more-info-button {
-            width: 100%;
+
+          .more-info-ref {
+            width: max-content;
             height: 40px;
+            font-family: $main-font-family;
+            font-size: 20px;
+            padding-top: 4px;
+            font-weight: 300;
             background: transparent;
             margin-top: 5px;
             color: rgb(139, 162, 173);
             border: none;
-            border-radius: 6px;
+            text-decoration: none;
             cursor: pointer;
           }
         }
       }
     }
-    
   }
 }
