--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,31 +9,271 @@ html {
 }
 
 .page {
-  min-width: 90%;
+  max-width: 1710px;
   min-height: 100%;
+  width: 100%;
+  margin-left: calc((100% - 1710px) / 2);
+  margin-right: calc((100% - 1710px) / 2);
   background-color: #212529;
   display: flex;
   position: absolute;
   border-left: 1px solid $main-border;
   border-right: 1px solid $main-border;
-  margin-left: 5%;
-  margin-right: 5%;
+  
   padding-top: 65px;
   flex-direction: column;
   justify-content: center;
+  overflow-x: hidden;
   align-items: center;
   box-sizing: border-box;
 
+  @media all and (max-width: 1780px) {  
+    width: 100%;
+    max-width: 100%;
+    border: none;
+    margin: 0px;
+    padding-top: 35px;
+  }
+
+  @media all and (max-width: 1050px) {
+    padding-top: 65px;
+  }
   .header {
     z-index: 2;
     background-color: $main-grey;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
     position: fixed;
     top: 0;
     width: 100%;
     height: 65px;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid $main-border;
+
+    .recent-locations {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      height: 100%;
+      width: 80%;
+      border-right: 1px solid $main-border;
+      box-sizing: content-box;
+      position: relative;
+
+      @media all and (max-width: 1550px) {
+        grid-row-start: 1;
+        grid-row-end: 1;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        border-right: none;
+        border-bottom: 1px solid $main-border;
+        justify-content: center;
+      }
+
+      @media all and (max-width: 1050px) {
+        border: none; 
+      }
+
+      .search-menu {
+        height: 215px;
+        width: 444px;
+        z-index: 1;
+        background-color: #475055;
+        position: absolute;
+        border-bottom-left-radius: 20px;
+        top: 40px;
+
+        @media all and (max-width: 1550px) {
+          width: 600px;
+        }
+
+        @media all and (max-width: 1050px) {
+          width: calc(100% + 4px);
+        }
+
+        .search-menu-array-elem-location-name-h3 {
+          margin: 0px;
+          margin-top: 5px;
+          padding-left: 19px;
+          color: rgb(139, 162, 173);
+          font-size: 19px;
+          font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+          font-weight: 500;
+        }
+
+        .search-menu-array {
+          border-top: 1px solid $main-border;
+          margin-top: 30px;
+          width: 444px;
+          height: 183px;
+          overflow-y: scroll;
+          overflow-x: hidden;
+          scrollbar-color: rgb(123, 123, 123) #475055;
+
+          @media all and (max-width: 1550px) {
+            width: 600px;
+            margin-top: 25px;
+          }
+
+          @media all and (max-width: 1050px) {
+            width: 100%;
+          }
+
+          .search-menu-array-elem {
+            width: 400px;
+            margin-left: 15px;
+            padding-left: 4px;
+            height: 60px;
+            cursor: pointer;
+            color: rgb(139, 162, 173);
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            font-weight: 500;
+            background-color: transparent;
+            position: relative;
+
+            @media all and (max-width: 1550px) {
+              width: 570px;
+            }
+
+            @media all and (max-width: 1050px) {
+              width: 100%;
+              font-size: 13px;
+            }
+
+            .search-menu-array-elem-location-name-h2 {
+              margin: 0px;
+              margin-top: 5px;
+            }
+
+            .search-menu-array-elem-long-and-lat-div {
+              display: flex;
+              flex-direction: row;
+              justify-content: start;
+              align-items: center;
+              padding-top: 5px;
+
+              .search-menu-array-elem-long {
+                padding-left: 20px;
+              }
+            }
+
+            .search-menu-array-elem-delete-div {
+              position: absolute;
+              top: 10px;
+              left: 90%;
+              border-radius: 20px;
+              width: 35px;
+              height: 35px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              &:hover {
+                background-color: #70777b;
+                color: aliceblue;
+              }
+
+              @media all and (max-width: 1050px) {
+                top: 3px;
+                left: 80%;
+              }
+              
+            }
+          }
+        }
+      }
+
+      .input-form {
+        z-index: 2;
+        border: 2px solid transparent;
+        margin-top: 20px;
+        background-color: #475055;
+        border-radius: 20px;
+        display: flex;
+        width: 440px;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+
+        @media all and (max-width: 1550px) {
+          margin-top: 0px;
+          width: 600px;
+        }
+
+        @media all and (max-width: 1050px) {
+          width: 100%;
+        }
+
+        .span-svg-search {
+          padding-left: 16px;
+          padding-right: 5px;
+          padding-top: 4px;
+        }
+
+        .input-span {
+          padding-top: 8px;
+          padding-bottom: 8px;
+          display: flex;
+          flex-direction: row;
+          justify-content: start;
+          align-items: center;
+
+          @media all and (max-width: 1050px) {
+            width: 100%;
+          }
+
+          .search-input {
+            background-color: transparent;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            font-size: 14px;
+            border: none;
+            height: 20px;
+            width: 350px;
+            color: rgb(242, 242, 242);
+            outline-style: none;
+
+            &::placeholder {
+              color: rgb(139, 162, 173);
+              opacity: 1;
+            }
+
+            &::-ms-input-placeholder {
+              color: rgb(139, 162, 173);
+            }
+
+            @media all and (max-width: 1550px) {
+              width: 500px;
+            }
+
+            @media all and (max-width: 1050px) {
+              width: 100%;
+            }
+          }
+        }
+
+        .input-cleaner-button {
+          background: transparent;
+          position: relative;
+          border: none;
+          cursor: pointer;
+          margin-right: 15px;
+          border-radius: 20px;
+          width: 50px;
+          height: 35px;
+
+          &:hover {
+            background-color: #70777b;
+            border-radius: 18px;
+          }
+
+          .input-cleaner-svg {
+            padding-top: 4px;
+          }
+        }
+      }
+    }
   }
 
   .main {
@@ -48,12 +288,6 @@ html {
     align-items: center;
     overflow: auto;
 
-    .load-button {
-      position: absolute;
-      top: 80%;
-      left: 0%;
-    }
-
     .center-div {
       display: flex;
       flex-direction: column;
@@ -61,6 +295,14 @@ html {
       align-items: start;
       width: max-content;
       height: max-content;
+
+      @media all and (max-width: 1550px) {
+        align-items: center;
+      }
+      
+      @media all and (max-width: 1050px) {
+        width: 100%;
+      }
 
       .settings {
         background-color: $main-grey;
@@ -73,16 +315,34 @@ html {
         justify-content: start;
         align-items: center;
 
+        @media all and (max-width: 1550px) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 65px 275px;
+          height: 340px;
+          width: 1015px;
+        }
+
         .recent-locations {
           display: flex;
           flex-direction: column;
           justify-content: start;
           align-items: center;
           height: 100%;
-          width: 33%;
+          width: 100%;
           border-right: 1px solid $main-border;
           box-sizing: content-box;
           position: relative;
+
+          @media all and (max-width: 1550px) {
+            grid-row-start: 1;
+            grid-row-end: 1;
+            grid-column-start: 1;
+            grid-column-end: 3;
+            border-right: none;
+            border-bottom: 1px solid $main-border;
+            justify-content: center;
+          }
 
           .search-menu {
             height: 215px;
@@ -91,8 +351,11 @@ html {
             background-color: #475055;
             position: absolute;
             border-bottom-left-radius: 20px;
-            // border-bottom-right-radius: 20px;
             top: 40px;
+
+            @media all and (max-width: 1550px) {
+              width: 604px;
+            }
 
             .search-menu-array-elem-location-name-h3 {
               margin: 0px;
@@ -113,6 +376,11 @@ html {
               overflow-x: hidden;
               scrollbar-color: rgb(123, 123, 123) #475055;
 
+              @media all and (max-width: 1550px) {
+                width: 600px;
+                margin-top: 25px;
+              }
+
               .search-menu-array-elem {
                 width: 400px;
                 margin-left: 15px;
@@ -124,6 +392,10 @@ html {
                 font-weight: 500;
                 background-color: transparent;
                 position: relative;
+
+                @media all and (max-width: 1550px) {
+                  width: 570px;
+                }
 
                 .search-menu-array-elem-location-name-h2 {
                   margin: 0px;
@@ -174,6 +446,11 @@ html {
             justify-content: start;
             align-items: center;
 
+            @media all and (max-width: 1550px) {
+              margin-top: 0px;
+              width: 600px;
+            }
+
             .span-svg-search {
               padding-left: 16px;
               padding-right: 5px;
@@ -206,6 +483,10 @@ html {
                 &::-ms-input-placeholder {
                   color: rgb(139, 162, 173);
                 }
+
+                @media all and (max-width: 1550px) {
+                  width: 500px;
+                }
               }
             }
 
@@ -219,6 +500,8 @@ html {
               border-radius: 20px;
               width: 50px;
               height: 35px;
+
+              
 
               &:hover {
                 background-color: #70777b;
@@ -238,10 +521,19 @@ html {
           justify-content: space-between;
           align-items: center;
           height: 100%;
-          width: 33%;
+          width: 100%;
           padding-left: 15px;
           padding-right: 15px;
           border-right: 1px solid $main-border;
+
+          @media all and (max-width: 1550px) {
+            grid-row-start: 2;
+            grid-row-end: 2;
+            grid-column-start: 1;
+            grid-column-end: 1;
+            padding: 0px;
+            padding-right: 8px;
+          }
 
           .current-locations-h2-div {
             width: 460px;
@@ -335,7 +627,14 @@ html {
           justify-content: space-between;
           align-items: center;
           height: 100%;
-          width: 33%;
+          width: 100%;
+
+          @media all and (max-width: 1550px) {
+            grid-row-start: 2;
+            grid-row-end: 2;
+            grid-column-start: 2;
+            grid-column-end: 2;
+          }
 
           .add-locations-h2-div {
             width: 460px;
@@ -643,6 +942,36 @@ html {
             text-decoration: none;
             cursor: pointer;
           }
+        }
+      }
+
+      .current-weather-phone {
+        width: 80%;
+        height: 300px;
+        background-color: $main-grey;
+        border-radius: 20px;
+        border: 1px solid $main-border;
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        font-family: $main-font-family;
+        color: rgb(139, 162, 173);
+
+        .current-weather-phone-title {
+          font-size: 32px;
+          padding-top: 4px;
+        }
+
+        .current-weather-phone-location {
+          font-size: 22px;
+        }
+
+        .current-weather-phone-temperature {
+          color: aliceblue;
+          font-size: 100px;
+
         }
       }
     }
