--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -829,6 +829,11 @@ html {
               border: 1px solid $main-border;
               user-select: none;
               -ms-user-select: none;
+
+              @media all and (max-width: 1050px) {
+                font-size: 7px;
+                line-height: 15px;
+              }
             }
           }
         }
@@ -843,6 +848,13 @@ html {
         align-items: center;
         width: 100%;
         height: 100%;
+
+        @media all and (max-width: 1550px) {
+          justify-content: space-between;
+          background-color: #293135;
+          border-radius: 20px;
+          border: 1px solid $main-border;
+        }
 
         .day-block {
           display: flex;
@@ -989,7 +1001,7 @@ html {
       }
 
       .weather-containers-phone {
-        width: 80%;
+        width: calc(80% + 2px);
         margin-top: 20px;
         height: max-content;
         display: flex;
@@ -1066,9 +1078,202 @@ html {
                 top: 0;
               }
             }
+          }
+        }
+      }
 
-            .min-temperature-phone {
-              
+      .add-location-phone-resolution {
+        width: calc(80% + 2px);
+        height: max-content;
+        border-radius: 20px;
+        border: 1px solid $main-border;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        background-color: $main-grey;
+        color: $main-font-color;
+        font-family: $main-font-family;
+        font-size: 20px;
+
+        .add-location-phone-resolution-title {
+          margin-left: 5%;
+          height: 35px;
+          display: flex;
+          align-items: center;
+          justify-content: start;
+          font-size: 15px;
+        }
+
+        .add-location-phone-resolution-lat-and-long {
+          width: 90%;
+          margin-left: 5%;
+          margin-right: 5%;
+          height: max-content;
+          padding-top: 3%;
+          padding-bottom: 3%;
+          border-top: 1px solid $main-border;
+
+          .add-location-phone-resolution-lat-and-long-label {
+            position: absolute;
+            padding-left: 12px;
+            padding-top: 6px;
+            font-size: 15px;
+          }
+
+          .add-location-phone-resolution-lat-and-long-input {
+            background-color: transparent;
+            border: 1px solid $main-border;
+            border-radius: 6px;
+            color: rgb(222, 226, 230);
+            cursor: text;
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 400;
+            width: 95%;
+            margin-right: 5%;
+            height: 20px;
+            padding-top: 28px;
+            padding-left: 12px;
+            // padding-right: 12px;
+            padding-bottom: 10px;
+          }
+
+          .add-location-phone-resolution-lat-and-long-error {
+            background-color: #dc3545;
+            width: max-content;
+            height: 30px;
+            padding-left: 3px;
+            padding-right: 3px;
+            line-height: 30px;
+            color: aliceblue;
+            font-size: 11px;
+            border-radius: 6px;
+          }
+        }
+
+        .add-location-phone-resolution-location {
+          width: 90%;
+          margin-left: 5%;
+          margin-right: 5%;
+          height: max-content;
+          padding-top: 3%;
+          padding-bottom: 3%;
+          border-top: 1px solid $main-border;
+
+          .add-location-phone-resolution-location-label {
+            position: absolute;
+            padding-left: 12px;
+            padding-top: 6px;
+            font-size: 15px;
+          }
+
+          .add-location-phone-resolution-location-input {
+            background-color: transparent;
+            border: 1px solid $main-border;
+            border-radius: 6px;
+            color: rgb(222, 226, 230);
+            cursor: text;
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 400;
+            width: 95%;
+            margin-right: 5%;
+            height: 20px;
+            padding-top: 28px;
+            padding-left: 12px;
+            // padding-right: 12px;
+            padding-bottom: 10px;
+          }
+        }
+
+        .add-location-phone-resolution-button-positioning-div {
+          display: flex;
+          flex-direction: row;
+          justify-content: start;
+          align-items: center;
+          width: 90%;
+          margin-left: 5%;
+          border-top: 1px solid $main-border;
+
+          .add-location-phone-resolution-button-div {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-top: 9px;
+            margin-bottom: 9px;
+            height: 40px;
+            width: 95px;
+            border-radius: 20px;
+            outline: none;
+            border: 1px solid $main-border;
+            cursor: pointer;
+            background-color: transparent;
+            color: rgb(139, 162, 173);
+
+            @media all and (min-width: 1550px) {
+              &:hover {
+                background-color: #475055;
+              }
+            }
+
+            .add-location-phone-resolution-button-button {
+              outline: none;
+              border: none;
+              cursor: pointer;
+              background: transparent;
+              color: rgb(139, 162, 173);
+              font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+              font-size: 16px;
+              font-weight: 500;
+              padding-bottom: 4px;
+            }
+          }
+          .add-location-button-successfully-added {
+            margin-left: 15px;
+            border-radius: 20px;
+            background-color: #dc3545;
+            width: max-content;
+            height: 30px;
+            padding-left: 3px;
+            padding-right: 3px;
+            line-height: 30px;
+            color: aliceblue;
+            font-size: 15px;
+            border-radius: 6px;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto;
+            height: 40px;
+            padding-left: 15px;
+            padding-right: 15px;
+            width: max-content;
+            text-align: center;
+            line-height: 40px;
+            border: 1px solid $main-border;
+            user-select: none;
+            -ms-user-select: none;
+          }
+
+          .add-location-button-successfully-added {
+            margin-left: 8px;
+            border-radius: 20px;
+            background-color: #dc3545;
+            color: aliceblue;
+            font-size: 15px;
+            border-radius: 6px;
+            height: 40px;
+            padding-left: 10px;
+            padding-right: 10px;
+            width: max-content;
+            text-align: center;
+            line-height: 40px;
+            border: 1px solid $main-border;
+            user-select: none;
+            -ms-user-select: none;
+
+            @media all and (max-width: 1050px) {
+              font-size: 14px;
+              line-height: 20px;
+              padding-left: 0px;
+              padding-right: 0px;
             }
           }
         }
